# droidbox

./: README.md
nbproj/: .gitignore  README.md  local.properties
nbproj/app/: .gitignore  build.gradle
nbproj/app/src/main/: AndroidManifest.xml
nbproj/app/src/main/cpp/: CMakeLists.txt  common.h  main.c
nbproj/gradle/wrapper/: gradle-wrapper.properties
pdroid/: .gitignore
pdroid/app/: build.gradle
pdroid/app/src/main/: AndroidManifest.xml
pdroid/app/src/main/cpp/: CMakeLists.txt  ball.hpp  blocks.hpp  design.txt  display.hpp  engine.hpp  log.hpp  main.cpp  paddle.hpp  shader.hpp
pdroid/app/src/main/res/values/: strings.xml
pdroid/gradle/wrapper/: gradle-wrapper.properties
